--- a/index.html
+++ b/index.html
@@ -3,55 +3,30 @@
 <head>
 <meta http-eaquiv="Content-Type" content="text/html;charset=utf-8">
 <title>任务8</title>
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" href="
 </head>
 
 <body >
-<div class="container">
-		<div class="row" style="margin:20px">
-				<div class="col-sm-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
+<section class="container">
+		<div class="row" >
+				<div class="col-sm-4 ni col-xs-6"></div>
+				<div class="col-sm-4 ni col-xs-6"></div>
+				<div class="col-sm-4 ni col-xs-12"></div>
 		</div>
-		<div class="row" style="margin:20px">
-				<div class="col-sm-2" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-5" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-2" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
+		<div class="row" >
+				<div class="col-sm-3  ni col-xs-3 "></div>
+				<div class="col-sm-6 ni col-xs-6" ></div>
+				<div class="col-sm-3 ni col-xs-3" ></div>
 		</div>
-		<div class="row" style="margin:20px">
-				<div class="col-sm-1" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-1" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-2" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-2" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
-				<div class="col-sm-4" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">四栏</div>
+		<div class="row" >
+				<div class="col-sm-1 ni col-xs-2" ></div>
+				<div class="col-sm-1 ni col-xs-2" ></div>
+				<div class="col-sm-2 ni col-xs-8" ></div>
+				<div class="col-sm-2 ni col-xs-3" ></div>
+				<div class="col-sm-6 ni col-xs-3" ></div>
 		</div>
 
-
-
-		<div class="row" style="margin:20px">
-				<div class="col-xs-5" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">六栏</div>
-				<div class="col-xs-5" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">六栏</div>
-		</div>	
-		<div class="row" style="margin:20px">
-				<div class="col-xs-12" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">十二栏</div>
-		</div>
-		<div class="row" style="margin:20px">
-				<div class="col-xs-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">三栏</div>
-				<div class="col-xs-5" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">六栏</div>
-				<div class="col-xs-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">三栏</div>
-		</div>
-		<div class="row" style="margin:20px">
-				<div class="col-xs-2" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">二栏</div>
-				<div class="col-xs-2" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">二栏</div>
-				<div class="col-xs-7" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">六栏</div>
-		</div>
-		<div class="row" style="margin:20px">
-				<div class="col-xs-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">三栏</div>
-				<div class="col-xs-3" style="height:50px;background-color:#eee;border:1px solid black;color:red;margin-left:20px;padding:5px;">三栏</div>
-				
-		</div>
-</div>		
+</section>		
 </body>
+</html>		
