--- a/index.html
+++ b/index.html
@@ -4,7 +4,49 @@
 <meta http-eaquiv="Content-Type" content="text/html;charset=utf-8">
 <title>任务8</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="
+
+<style>
+.container {width:100%;
+    padding: 20px;
+    border: 1px solid red;
+    overflow: hidden;
+	}
+.ni{height:50px;
+	background-color:#eee;
+	border:1px solid black;
+	color:red;
+	margin:10px;
+	padding:5px;
+	float:left;}
+@media all and (min-width:769px){
+	.col-sm-1{width: 5%;}
+	.col-sm-2{width: 14.23%;}
+	.col-sm-3{width: 20.68%;}
+	.col-sm-4{width: 31%;}
+	.col-sm-5{width: 33.33%;}
+	.col-sm-6{width: 51.66%;}
+	.col-sm-7{width: 50%;}
+	.col-sm-8{width: 58.33%;}
+	.col-sm-9{width: 66.66%;}
+	.col-sm-10{width: 75%;}
+	.col-sm-11{width: 83.33%;}
+	.col-sm-12{width: 100%;}
+}
+@media all and (max-width:769px){
+	.col-xs-1{width: 5%;}
+	.col-xs-2{width: 14.23%;}
+	.col-xs-3{width: 22.68%;}
+	.col-xs-4{width: 31%;}
+	.col-xs-5{width: 33.33%;}
+	.col-xs-6{width: 46.66%;}
+	.col-xs-7{width: 52%;}
+	.col-xs-8{width: 63.53%;}
+	.col-xs-9{width: 73.66%;}
+	.col-xs-10{width: 79%;}
+	.col-xs-11{width: 83.33%;}
+	.col-xs-12{width: 95%;}
+}
+</style>
 </head>
 
 <body >
@@ -30,3 +72,4 @@
 </section>		
 </body>
 </html>		
+		
